--- a/ibsen.css
+++ b/ibsen.css
@@ -65,6 +65,6 @@ ul.navbar-horizontal li {
   
   ul.navbar-horizontal a:hover {  
     background-color: burlywood;
-    color:white;
+    color:black;
   }
 
